[tool.poetry]
name = "gamee-cheats"
version = "0.1.0"
description = ""
authors = ["Ansar Nurzhanov <nansarik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.1.0"
keyboard = "^0.13.5"
pyautogui = "^0.9.54"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
